Bug 1062307 - Ensure the contextmenu event triggered by a long-press action targets things outside the root scroll frame. r=capella, r=smaug, a=lmandel